# wheelhouse

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  embed.py  pyproject.toml  query.py  requirements.txt  scrape.py
.github/workflows/: constraints.txt  main.yaml
docs/: project_specific_setup.md  using_poetry.md
tests/: test_wheelhouse.py
wheelhouse/: app.py  conference.py  embed.py  query.py  scrape.py
